<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Order</string>
    <string name="name">Name</string>

    <string name="sauces">Sauces</string>
    <string name="marinara">Tomato Marinara</string>
    <string name="bbq">Sweet BBQ</string>

    <string name="toppings">Toppings</string>
    <string name="jalepeno">Jalepenos</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="chicken">Chicken</string>
    <string name="veggie">Mixed Veggies</string>


    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">2</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name:<xliff:g example="Vijaya" id="name">%s</xliff:g></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="order_summary_whipped_cream">Add Whipped Cream? <xliff:g example="yes" id="addWhippedCream">%s</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g example="yes" id="addChocolate">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <string name="order_summary_total_price">Total: $ <xliff:g example="10" id="price">%.2f</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="too_much_coffee">Please select less than one hundred cups of coffee</string>
    <string name="too_little_coffee">Please select atleast one cup of coffee</string>
</resources>