<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.vijaya.myorder.MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:text="Select Crust and Sauce"
            android:textSize="30dp" />


        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Email" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/sauces" />

        <CheckBox
            android:id="@+id/marinara_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/marinara"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/bbq_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/bbq"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />


        <CheckBox
            android:id="@+id/pepperoni_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/pepperoni"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/jalepeno_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/jalepeno"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/veggie_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/veggie"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/chicken_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/chicken"
            android:textSize="16sp" />

        <Button
            android:id="@+id/save_order_button"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:layout_marginTop="40sp"
            android:layout_gravity="center"
            android:text="next"
            android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>